    info-browsers that do not depend on the new install-info package
    that provides the real functionality. Closes: #9771, #523980
    See http://wiki.debian.org/Transitions/DpkgToGnuInstallInfo for details.
  * Fix dpkg's preinst in case /var/lib/dpkg/alternatives contains unexpected
    sub-directories. Closes: #535138
  * Upgrade Standards-Version to 3.8.2 (no changes).

  [ Updated dpkg translations ]
  * Asturian (Marcos Alvarez Costales). Closes: #535327
  * French (Christian Perrier).
  * German (Sven Joachim).
  * Italian (Milo Casagrande). Closes: #536538

  [ Updated man page translations ]
  * German (Helge Kreutzmann), proofreading by Jens Seidel.

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Sat, 27 Jun 2009 19:25:30 +0200

dpkg (1.15.3.1) unstable; urgency=low

  [ Modestas Vainius ]
  * Fix wildcard support in symbol files. Closes: #536034

 -- Guillem Jover <guillem@debian.org>  Wed, 08 Jul 2009 11:26:36 +0200

dpkg (1.15.3) unstable; urgency=low

  [ Guillem Jover ]
  * Unset TAR_OPTIONS when extracting .deb archives.
  * Use default compressor values in dpkg-source from Dpkg::Source::Compressor.
  * Fix dpkg-scanpackages to properly detect spurious overrides.
  * Rewrite dpkg-name in perl.
  * Do not close already closed files in some error conditions in libdpkg.
  * Use the correct units (KiB) in dpkg-split when referring to partsize.
  * Document in dpkg-statoverride(8) that mode needs to be specified in
    octal. Closes: #534551
  * Mark argument names in dpkg-statoverride.1 in italic.
  * Explicitly pass field argument to Dpkg::ErrorHandling::unknown().
  * Move unknown() from Dpkg::ErrorHandling to Dpkg::Fields.

  [ Raphael Hertzog ]
  * Unset TAR_OPTIONS when creating/extracting tar archives for source
    packages. Closes: #530860
  * Add cleanup of all invalid (master) alternatives in preinst script.
    Closes: #530633, #531611, #532739, #521760