@@ -34,6 +34,9 @@ dpkg (1.15.4) UNRELEASED; urgency=low
     sub-directories. Closes: #535138
   * Upgrade Standards-Version to 3.8.2 (no changes).
 
+  [ Modestas Vainius ]
+  * Provide a meaningful label for dpkg-gensymbols diff.
+
   [ Updated dpkg translations ]
   * Asturian (Marcos Alvarez Costales). Closes: #535327
   * French (Christian Perrier).
